--- a/Milestone3/index.html
+++ b/Milestone3/index.html
@@ -53,7 +53,7 @@
                         placeholder="Cerca o inizia una nuova chat">
                 </div>
                 <div class="d-flex flex-column overflow-auto h-100">
-                    <div @click="showCurrentMess(utente)" v-for="(utente,indice) in contacts "
+                    <div tabindex="0" @click="showCurrentMess(utente)" v-for="(utente,indice) in contacts "
                         v-bind:class="{'utenteSelezionato': utente.contactVisible}"
                         class=" container d-flex flex-grow-1 justify-content-between bg-white">
                         <div class="Utente d-flex ">
@@ -95,12 +95,11 @@
                             <div  class="ps-2 pe-5">{{currentContact.messages[indice].message}}</div>
                             <div  class="pe-1 ps-5 date-small text-muted align-self-end">{{currentContact.messages[indice].date}}</div>
                         </div>
-                      
-                        <div v-if="currentContact.messages[indice].status==='received'" v-for="(utente,indice) in currentContact.messages"
-                            class="align-self-start my-3 ps-2  py-2 rounded-3 mess-recived justify-content-between d-flex">
-                            <div  class="ps-2 pe-5">{{currentContact.messages[indice].message}}</div>
-                            <div  class=" pe-1 ps-5 date-small text-muted align-self-end">{{currentContact.messages[indice].date}}</div>
-                        </div>
+                        <div v-else class="align-self-start my-3 ps-2 mess-recived py-2 rounded-3 justify-content-between d-flex">
+                            <div class="ps-2 pe-5">{{currentContact.messages[indice].message}}</div>
+                            <div class="pe-1 ps-5 date-small text-muted align-self-start">{{currentContact.messages[indice].date}}</div> 
+                        
+                    </div>
                     </div>
 
                 </div>
